# project_rendering

./: CHANGELOG.md  README.md  setup.cfg
src/project_rendering/: __init__.py  __main__.py
src/project_rendering/templates/: product.yaml.jinja
src/scripts/: render_project.py
tests/: test_runner.py
tests/case_1/: builds.yaml  output.yml  product-config.yaml
tests/case_2/: output.yml  product-config.yaml  product.yaml.jinja
tests/case_3/: builds.yaml  output.yml  product-config.yaml
