[metadata]
name = project_rendering
version = 0.0.1
author = arewm
description = A set of utilities to make rendering pipeline objects easier
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/arewm/project_rendering
project_urls =
    Bug Tracker = https://github.com/arewm/project_rendering/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
scripts = src/scripts/render_project.py
python_requires = >=3.6
install_requires =
    pyyaml
    jinja2

[options.packages.find]
where = src
